--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "niconico-filter-by-poster",
     "description": "filter videos on niconico ranking top by user/channel",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "content_scripts": [
         {
             "matches": [
@@ -10,7 +10,7 @@
                 "https://www.nicovideo.jp/ranking?*"
             ],
             "js": [
-                "main.js"
+                "js/main.js"
             ],
             "css": [
                 "main.css"
@@ -18,7 +18,7 @@
         }
     ],
     "background": {
-        "scripts": ["menus.js"]
+        "scripts": ["js/menus.js"]
     },
     "permissions": [
         "https://ext.nicovideo.jp/api/getthumbinfo/*",
