Add StandardJS as a dev dependency

--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "scripts": {
+    "fix": "standard --fix"
+  },
   "standard": {
-    "globals": [ "fetch", "browser", "MutationObserver" ]
+    "globals": [
+      "fetch",
+      "browser",
+      "MutationObserver"
+    ]
+  },
+  "devDependencies": {
+    "standard": "^16.0.4"
   }
 }
