--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     ]
   },
   "devDependencies": {
+    "@types/firefox-webext-browser": "^94.0.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "typescript": "^4.8.4"
   },
   "lint-staged": {
     "*.js": "standard --fix"
